Fix laout on mobile horizontal

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,7 @@ body,
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     row-gap: 4rem;
+    width: 90%;
   }
   .about__grid {
     display: grid;
